# python-demo

./: .env.example  .env.tests.example  .gitignore  README.md  alembic.ini  log_conf.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: cee1565497f2_initial.py  d41291db3c81_adding_system_entity.py
src/: auth.py  database.py  entities.py  main.py  models.py  settings.py
src/routes/: planets.py  stations.py  systems.py
src/services/: projects.py
tests/: conftest.py  test_main.py  test_planets.py
